	* Add security to file-based OpenID store
	* Added necessary "unique" evaluations on the OpenID field
	* Patched OpenID library to use cURL proxy settings configured in TYPO3
	* openid system extension is reformatted with extdeveval
	* Added manual for the OpenID extension
	* Changed icons for contentrss and openid extensions

2008-09-24  Ingo Renner  <ingo@typo3.org>

	* Cleaned up some code regarding the page caching to prepare for transition to t3lib_cache
	* Added columns to cache_pages needed for the t3lib_cache DB backend
	* Fixed bug in t3lib_cache: t3lib_cache_AbstractCache->save() didn't request a lifetime parameter, but the cache backends do
	* Changed adding and retrieving a page to/from the cache (cache_pages) to use the t3lib_cache
	* Added a method flushByTags() to the t3lib_cache classes
	* Added a method addCacheTags() to tslib_fe so that extensions can easily tag cache entries for pages
	* Added the caching framework in typo3/init.php so that it is available in the BE, too
	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
	* Changed table cache_pagesection to use t3lib_cache
	* Changed table cache_hash to use t3lib_cache
	* Added indexes for the cache tables (cache_hash, cache_pages, cache_pagesection)
	* Added options to change the backends used for each cache (cache_hash, cache_pages, cache_pagesection)
	* Fixed several issues in t3lib_cache_backend_file
	* Renamed the "data" column in cache tables to "content" to prevent conflicts with reserved names

2008-09-23  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9411: Editors cannot create new translations of pages

2008-09-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9401: Use debug() for sqlDebug (thanks to Steffen Kamper)

2008-09-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8719: File upload ends up in parse_url error on Windows (thanks to Steffen Kamper)

2008-09-21  Stanislas Rolland  <typo3@sjbr.ca>
