@@ -25,6 +25,7 @@
 	* openid system extension is reformatted with extdeveval
 	* Added manual for the OpenID extension
 	* Changed icons for contentrss and openid extensions
+	* Add two missing methods to t3lib/cache/backend/class.t3lib_cache_backend_memcached.php
 
 2008-09-24  Ingo Renner  <ingo@typo3.org>
 
